#27 .. ensure there are always BUFFER_ROWS rows beyond the visible rows of the table

--- a/src/css/atable.css
+++ b/src/css/atable.css
@@ -31,7 +31,6 @@
 
 .atable td>div {
     overflow: hidden;
-    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
